# furigana

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  MAINTAINING.md  MIGRATION.md  NOTICE.md  README.md  SECURITY.md  about.hbs  about.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/furigana/: Cargo.toml  README.md
crates/furigana-cli/: Cargo.toml  README.md
crates/furigana-cli/src/: config.rs  main.rs  paths.rs
crates/furigana-cli/src/commands/: dict.rs  dict_pull.rs  lookup.rs  mod.rs  repl.rs  serve.rs
crates/furigana-cli/src/commands/serve/: auth.rs  handlers.rs  metrics.rs  mod.rs  types.rs
crates/furigana-wasm/: Cargo.toml  README.md
crates/furigana-wasm/examples/: index.html
crates/furigana-wasm/src/: lib.rs
crates/furigana/benches/: lookup.rs
crates/furigana/examples/: analyze_inspect.rs  basic.rs  builder.rs
crates/furigana/src/: analyzer.rs  api.rs  chunks.rs  dict.rs  embedded.rs  error.rs  kana.rs  lib.rs  loader.rs  loanwords.rs  numbers.rs  reading.rs  romaji.rs  sanitize.rs  single_overrides.rs  tts.rs
crates/furigana/src/chunks/: mod.rs  regex.rs
crates/furigana/src/numbers/: counter.rs  digit.rs  extras.rs  helpers.rs  mod.rs  phrase.rs
crates/furigana/src/reading/: context.rs  merge.rs  mod.rs  output.rs  pipeline.rs
crates/furigana/src/rules/: compat.rs  context.rs  counters.rs  days.rs  latin.rs  mod.rs  numeric_phrases.rs  postprocess.rs  scales.rs  symbols.rs  units.rs
crates/furigana/src/scoring/: analyze.rs  boundary.rs  bracket.rs  candidate.rs  engine.rs  format.rs  inspect.rs  lindera_fallback.rs  matcher.rs  mod.rs  numbers.rs  odoriji.rs  special.rs
crates/furigana/tests/: components_repro.rs  furigana_layer_repro.rs  lindera_minimal_repro.rs  load_real_data.rs  static_regex_repro.rs
crates/furigana/tests/fixtures/rules/: context.toml  counters.toml  days.toml  latin.toml  numeric_phrases.toml  scales.toml  symbols.toml  units.toml
data/rules/: compat_map.toml  compat_map.tsv  latin.tsv  numeric_phrases.tsv  scales.tsv  symbols.tsv  units.tsv
docs/: ARCHITECTURE.md  CONFIG.md  DATA_LAYOUT.md  HTTP_API.md  ROADMAP.md  RULES.md
docs/PROPOSALS/: disambiguation-ml.md  intonation.md  scoring-engine.md
examples/clients/: README.md
examples/clients/curl/: example.sh
examples/clients/nodejs/: example.mjs
examples/clients/python/: example.py
tools/: check_samples.out  check_samples.py  check_samples.txt  verify_batch.sh  verify_batch.txt
