[workspace]
resolver = "2"
members = [
    "crates/furigana",
    "crates/furigana-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["RyuuNeko <mail@ryuuneko.com>"]
repository = "https://github.com/RyuuNeko1107/furigana"
homepage = "https://github.com/RyuuNeko1107/furigana"
keywords = ["japanese", "furigana", "ruby", "kana", "nlp"]
categories = ["text-processing", "internationalization"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
once_cell = "1"
regex = "1"
thiserror = "2"
tracing = "0.1"
unicode-normalization = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
