[workspace]
resolver = "2"
members = [
    "crates/furigana",
    "crates/furigana-cli",
]

[workspace.package]
version = "0.1.0-alpha.3"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["RyuuNeko <tsutsuicat@gmail.com>"]
repository = "https://github.com/RyuuNeko1107/ja-furigana"
homepage = "https://github.com/RyuuNeko1107/ja-furigana"
keywords = ["japanese", "furigana", "ruby", "kana", "nlp"]
categories = ["text-processing", "internationalization"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
once_cell = "1"
regex = "1"
thiserror = "2"
tracing = "0.1"
unicode-normalization = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# ─── Lints (workspace 全体に適用) ────────────────────────────────────────
# 各 crate の Cargo.toml で `[lints] workspace = true` を有効化することで継承
[workspace.lints.rust]
# 安全側に倒した一般的な warning
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
# pedantic 全部 = うるさすぎるので、実害大きめのカテゴリだけ
all = { level = "deny", priority = -1 }

# わざと許可するもの (data-driven でドキュメント中にタブが入る等)
tabs_in_doc_comments = "allow"

# pedantic の中から特に役立つもの個別有効化
needless_pass_by_value = "warn"
must_use_candidate = "warn"
explicit_iter_loop = "warn"
single_match_else = "warn"

# 他人の TODO 残しを防ぐ
todo = "deny"
unimplemented = "deny"
