[package]
name = "ja-furigana-cli"
description = "CLI and HTTP server for ja-furigana — Japanese ruby annotation. Installs the `furigana` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "furigana"
path = "src/main.rs"

# corpus regression / 辞書比較用 dev tool (★alpha.17)。
# user 向けではなく contributor / maintainer 用、 corpus の expected match rate を計測する。
[[bin]]
name = "furigana-corpus-check"
path = "src/bin/corpus_check.rs"

# 単一入力 analyze dump tool (★alpha.19)。 dict + rules mount 状態で AnalyzeResult
# を JSON 出力、 candidate / score / boundary を inspect する dev / debug 用途。
[[bin]]
name = "furigana-analyze-one"
path = "src/bin/analyze_one.rs"

# Dict gap mining tool (★alpha.20)。 大規模 corpus に対し analyze + extract_dict_gap_candidates
# を実行、 band ≤ threshold の surface を頻度ランキング化して TSV で出力。 OSS dict curation
# の 「次に追加すべき surface」 を抽出する dev / maintainer 用途。
[[bin]]
name = "furigana-dict-gap-mine"
path = "src/bin/dict_gap_mine.rs"

[lints]
workspace = true

[features]
# 形態素解析辞書の選択 (★alpha.17): lib 側の feature を pass-through。
# default = ipadic (lib と同じ)。 cargo build -p ja-furigana-cli --no-default-features
# --features dict-unidic で UniDic 版バイナリを build できる。
default = ["dict-ipadic"]
dict-ipadic = ["furigana/dict-ipadic"]
dict-unidic = ["furigana/dict-unidic"]

[dependencies]
# crates.io 上の crate 名は `ja-furigana` (`furigana` は別 crate に取られているため)。
# import 名は `furigana` のままにして CLI 内の `use furigana::...` を保つ (package alias)。
furigana = { package = "ja-furigana", path = "../furigana", version = "=0.1.0", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tower_governor = "0.7"
subtle = "2"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
anyhow = "1"
directories = "6"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "blocking"] }
flate2 = "1"
tar = "0.4"
base64 = "0.22"
sha2 = "0.11"
hex = "0.4"
rustyline = "18"
unicode-width = "0.2"
