[package]
name = "ja-furigana-wasm"
description = "WebAssembly bindings for ja-furigana — call Furigana::minimal() / to_ruby / to_hiragana from JavaScript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

# wasm-bindgen 用に cdylib (= .wasm モジュール) を出力。
# rlib も付けて将来 native で内部 test できるようにする余地を残す。
[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
furigana = { package = "ja-furigana", path = "../furigana", version = "=0.1.0-alpha.2" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# wasm-pack 同梱の wasm-opt が bulk-memory 命令を弾くため一旦 disable
# (Lindera が bulk-memory.copy を出力する)。最新 wasm-opt なら通るので、
# サイズ最適化したい時は別途 `wasm-opt --enable-bulk-memory -O4 input.wasm -o output.wasm`
# を手動で実行する。
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
