[package]
name = "ja-furigana"
description = "Japanese furigana (ruby) lookup library — Lindera-based analyzer + data-driven dictionary/rules from furigana-dict"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

# crates.io 上の package 名は `ja-furigana` (`furigana` は別 crate に取られているため)。
# import 名は `furigana` のままにして `use furigana::Furigana;` のように使えるようにする。
[lib]
name = "furigana"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
lindera = { version = "3", features = ["embed-ipadic"] }

[dev-dependencies]
serde_json = { workspace = true }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "html_reports"] }

[[bench]]
name = "lookup"
harness = false
