[package]
name = "ja-furigana"
description = "Japanese furigana (ruby) lookup library — Lindera-based analyzer + data-driven dictionary/rules from furigana-dict"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

# crates.io 上の package 名は `ja-furigana` (`furigana` は別 crate に取られているため)。
# import 名は `furigana` のままにして `use furigana::Furigana;` のように使えるようにする。
[lib]
name = "furigana"
path = "src/lib.rs"

[lints]
workspace = true

[features]
# 形態素解析辞書の選択 (★alpha.17): 排他的 = どれか 1 つを feature で選ぶ。
# default = ipadic (= 既存挙動維持、 OSS 配布での license 単純さ優先)。
default = ["dict-ipadic"]
dict-ipadic = ["lindera/embed-ipadic"]
dict-unidic = ["lindera/embed-unidic"]

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
aho-corasick = { workspace = true }
lindera = { version = "3", default-features = false, features = ["mmap"] }

[dev-dependencies]
serde_json = { workspace = true }
regex = { workspace = true }
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support", "html_reports"] }

[[bench]]
name = "lookup"
harness = false
